--- a/src/com/kamontat/gui/RandomPage.form
+++ b/src/com/kamontat/gui/RandomPage.form
@@ -33,9 +33,10 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="13d81" class="javax.swing.JList" binding="list1" default-binding="true">
+          <component id="13d81" class="javax.swing.JList" binding="list">
             <constraints/>
             <properties>
+              <enabled value="true"/>
               <font size="20"/>
               <layoutOrientation value="0"/>
               <model/>
